phase 4 changes